--- a/gui/package.json
+++ b/gui/package.json
@@ -10,8 +10,8 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
-    "vue-material": "^1.0.0-beta-11",
-    "vue-router": "^3.1.6"
+    "vue-router": "^3.1.6",
+    "vuetify": "^2.2.15"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
