--- a/gui/.gitignore
+++ b/gui/.gitignore
@@ -126,3 +126,47 @@ dist
 
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
+
+############
+
+.idea
+.DS_STORE
+.eslintcache
+*.swp
+*~
+/examples/*/node_modules/
+/examples/mongodb/globalConfig.json
+
+/e2e/*/node_modules
+/e2e/*/.pnp
+/e2e/*/.pnp.js
+!/e2e/presets/json/node_modules
+!/e2e/presets/js/node_modules
+/e2e/transform/*/coverage
+/e2e/transform/*/node_modules
+
+/node_modules
+
+/packages/*/build/
+/packages/*/build-es5/
+/packages/*/coverage/
+/packages/*/node_modules/
+/packages/*/package-lock.json
+
+/website/build
+/website/backers.json
+/website/node_modules
+/website/yarn.lock
+/website/translated_docs
+/website/i18n/*
+
+/reports/*
+
+coverage
+lerna-debug.log
+npm-debug.log
+npm-debug.log*
+yarn-error.log*
+junit.xml
+
+*.tsbuildinfo
