--- a/gui/package.json
+++ b/gui/package.json
@@ -13,7 +13,8 @@
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vue-session": "^1.0.0",
-    "vuetify": "^2.2.15"
+    "vuetify": "^2.2.15",
+    "vuex": "^3.1.3"
   },
   "devDependencies": {
     "@mdi/font": "^4.9.95",
