--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,18 +1,17 @@
-stages:
-  - build
-  - test
-build:
-  stage: build
-  script:
-    - echo "Building"
-    - mkdir build
-    - touch build/info.txt
-  artifacts:
-    paths:
-      - build/
-
-test:
-  stage: test
-  script:
-    - echo "Testing"
-    - test -f "build/info.txt"
+build site:
+    image: node:latest
+    stage: build
+    script:
+      - npm install --progress=false
+      - npm run build
+    artifacts:
+      expire_in: 1 week
+      paths:
+        - dist
+  
+  unit test:
+    image: node:latest
+    stage: test
+    script:
+      - npm install --progress=false
+      - npm run test:unit
