--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "vue-router": "^3.1.6",
     "vue-session": "^1.0.0",
     "vuetify": "^2.2.15",
-    "vuex": "^3.1.3"
+    "vuex": "^3.1.3",
+    "vuex-persistedstate": "^3.0.1"
   },
   "devDependencies": {
     "@mdi/font": "^4.9.95",
