--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,8 @@ pages:
   script:
     - npm install --progress=false
     - npm run build
-    - rm -rf public
+    # - rm -rf public
+    - rm public
     - mkdir public
     - cp -r dist/* public
   artifacts:
