--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,13 +25,12 @@ pages:
   image: node:latest
   stage: deploy
   script:
-    - npm install --progress=false
+    - npm ci
     - npm run build
-    # - rm -rf public
-    - rm public
-    - mkdir public
-    - cp -r dist/* public
+    - mv public public-vue # GitLab Pages hooks on the public folder
+    - mv dist public # rename the dist folder (result of npm run build)
+      # optionally, you can activate gzip support wih the following line:
+    - find public -type f -regex '.*\.\(htm\|html\|txt\|text\|js\|css\)$' -exec gzip -f -k {} \;
   artifacts:
-    expire_in: 1 day
     paths:
-      - public
+      - public # artifact path must be /public for GitLab Pages to pick it up
