--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,17 +19,17 @@ unit test:
   script:
     - npm install --progress=false
     - npm run test:unit
-pages:
-  tags:
-    - ci
-  image: node:latest
-  stage: deploy
-  script:
-    - npm ci
-    - npm run build
-    - mv public public-vue # GitLab Pages hooks on the public folder
-    - mv dist public # rename the dist folder (result of npm run build)
-      # optionally, you can activate gzip support wih the following line:
-  artifacts:
-    paths:
-      - public # artifact path must be /public for GitLab Pages to pick it up
+# pages:
+#   tags:
+#     - ci
+#   image: node:latest
+#   stage: deploy
+#   script:
+#     - npm ci
+#     - npm run build
+#     - mv public public-vue # GitLab Pages hooks on the public folder
+#     - mv dist public # rename the dist folder (result of npm run build)
+#       # optionally, you can activate gzip support wih the following line:
+#   artifacts:
+#     paths:
+#       - public # artifact path must be /public for GitLab Pages to pick it up
