--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
-    "core-js": "^3.6.4",
+    "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
-    "vue-router": "^3.1.6",
+    "vue-router": "^3.3.4",
     "vue-session": "^1.0.0",
-    "vuetify": "^2.2.15",
-    "vuex": "^3.1.3",
+    "vuetify": "^2.3.1",
+    "vuex": "^3.4.0",
     "vuex-persistedstate": "^3.0.1"
   },
   "devDependencies": {
@@ -25,16 +25,16 @@
     "@vue/cli-plugin-babel": "~4.4.1",
     "@vue/cli-plugin-e2e-nightwatch": "^4.4.4",
     "@vue/cli-plugin-eslint": "~4.2.0",
-    "@vue/cli-plugin-router": "^4.2.3",
-    "@vue/cli-plugin-unit-jest": "^4.2.3",
+    "@vue/cli-plugin-router": "^4.4.4",
+    "@vue/cli-plugin-unit-jest": "^4.4.4",
     "@vue/cli-service": "~4.2.0",
-    "@vue/test-utils": "^1.0.0-beta.32",
+    "@vue/test-utils": "^1.0.3",
     "babel-eslint": "^10.0.3",
     "chromedriver": "83",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "geckodriver": "^1.19.1",
-    "jest": "^25.1.0",
+    "jest": "^25.5.4",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
